Quick Responsive Fixes
- Corrected horizontal scroll
- Centered Card on mobile
- Improved responsive sizing

--- a/css/onboarding.css
+++ b/css/onboarding.css
@@ -11,6 +11,10 @@ body {
 	color: rgba(0, 0, 0, 0.54);
 }
 
+.white-secondary {
+  color: rgba(255, 255, 255, 0.70);
+}
+
 input {
   display: block;
 }
@@ -30,8 +34,8 @@ input {
 
 .card {
   margin: 60px auto 0 auto;
-  width: 300px;
-  height: 340px;
+  max-width: 300px;
+  height: auto;
 	-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   	-moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -87,7 +91,7 @@ input {
 
 .explanation{
   color: white;
-  width: 330px;
+  max-width: 330px;
   margin-top: 20px; 
 }
 
